--- a/BlazorApp_Crud/Components/Pages/ProductsPages/Edit.razor
+++ b/BlazorApp_Crud/Components/Pages/ProductsPages/Edit.razor
@@ -2,8 +2,7 @@
 @using BlazorApp_Crud.Repository
 @using Microsoft.EntityFrameworkCore
 @using BlazorApp_Crud.Model
-@inject IProductRepository ProductRepository
-@inject NavigationManager NavigationManager
+
 
 <PageTitle>Edit</PageTitle>
 
@@ -45,52 +44,7 @@ else
 }
 
 <div>
-	<a href="/products">Back to List</a>
+	<a href="@($"products/{@ProductDataSource}")">Back to List</a>
 </div>
 
-@code {
-	[SupplyParameterFromQuery]
-	private int ProductId { get; set; }
-
-	[SupplyParameterFromForm]
-	private Products? Products { get; set; }
-
-	protected override async Task OnInitializedAsync()
-	{
-
-		Products ??= await ProductRepository.GetProductByIdAsync(ProductId);
-
-		if (Products is null)
-		{
-			NavigationManager.NavigateTo("notfound");
-		}
-	}
-
-	// To protect from overposting attacks, enable the specific properties you want to bind to.
-	// For more information, see https://learn.microsoft.com/aspnet/core/blazor/forms/#mitigate-overposting-attacks.
-	private async Task UpdateProducts()
-	{
-		try
-		{
-			await ProductRepository.UpdateProductAsync(Products!);
-		}
-		catch (DbUpdateConcurrencyException)
-		{
-			if (!ProductsExists(Products!.ProductId))
-			{
-				NavigationManager.NavigateTo("notfound");
-			}
-			else
-			{
-				throw;
-			}
-		}
-		
-		NavigationManager.NavigateTo("/products");
-	}
-
-	private bool ProductsExists(int productid)
-	{
-		return ProductRepository.GetProductByIdAsync(productid) is not null;
-	}
-}
+ 
