--- a/BlazorApp_Crud/Components/Pages/ProductsPages/Index.razor
+++ b/BlazorApp_Crud/Components/Pages/ProductsPages/Index.razor
@@ -4,12 +4,14 @@
 @using Microsoft.AspNetCore.Components.QuickGrid
 @using BlazorApp_Crud.Model
 @* @implements IAsyncDisposable *@
- 
 
+@{
+	string currentDataSet = DataSourceEnum.GrpahQL.ToString();
+}
 <PageTitle>Index</PageTitle>
 
 <p>
-	<a href="products/create">Create New</a>
+	<a href="@($"products/create/{currentDataSet}")">Create New</a>
 </p>
 
 <QuickGrid Class="table" Items="ProductRepository.GetAllProductsQueryable()">
@@ -18,10 +20,9 @@
 	<PropertyColumn Property="products => products.Quantity" />
 
 	<TemplateColumn Context="products">
-		<a href="@($"products/edit?productid={products.ProductId}")">Edit</a> |
-		<a href="@($"products/details?productid={products.ProductId}")">Details</a> |
-		<a href="@($"products/delete?productid={products.ProductId}")">Delete</a>
+		<a href="@($"products/edit?productid={products.ProductId}&datasource={currentDataSet}")">Edit</a> |
+		<a href="@($"products/details?productid={products.ProductId}&datasource={currentDataSet}")">Details</a> |
+		<a href="@($"products/delete?productid={products.ProductId}&datasource={currentDataSet}")">Delete</a>
 	</TemplateColumn>
 </QuickGrid>
 
- 
